--- a/Note/res/layout/edit.xml
+++ b/Note/res/layout/edit.xml
@@ -51,7 +51,7 @@
                 android:id="@+id/btn_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="update" />
+                android:text="Update" />
         <Button
                 android:id="@+id/btn_delete"
                 android:layout_width="wrap_content"
